--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -2,149 +2,149 @@ name: RCES_Final
 channels:
   - defaults
 dependencies:
-  - affine=2.2.1
-  - asn1crypto=0.24.0
-  - attrs=18.2.0
-  - backcall=0.1.0
-  - blas=1.0
-  - bleach=3.0.2
-  - boto3=1.9.35
-  - botocore=1.12.35
-  - ca-certificates=2018.03.07
-  - cartopy=0.16.0
-  - certifi=2018.10.15
-  - cffi=1.11.5
-  - chardet=3.0.4
-  - click=7.0
-  - click-plugins=1.0.4
-  - cligj=0.5.0
-  - colorama=0.4.0
-  - cryptography=2.3.1
-  - curl=7.62.0
-  - cycler=0.10.0
-  - decorator=4.3.0
-  - docutils=0.14
-  - entrypoints=0.2.3
-  - expat=2.2.5
-  - freetype=2.9.1
-  - freexl=1.0.5
-  - geos=3.6.2
-  - hdf4=4.2.13
-  - hdf5=1.10.1
-  - icc_rt=2017.0.4
-  - icu=58.2
-  - idna=2.7
-  - intel-openmp=2019.0
-  - ipykernel=5.1.0
-  - ipython=7.1.1
-  - ipython_genutils=0.2.0
-  - ipywidgets=7.4.2
-  - jedi=0.13.1
-  - jinja2=2.10
-  - jmespath=0.9.3
-  - jpeg=9b
-  - jsonschema=2.6.0
-  - jupyter=1.0.0
-  - jupyter_client=5.2.3
-  - jupyter_console=6.0.0
-  - jupyter_core=4.4.0
-  - jupyterlab=0.35.3
-  - jupyterlab_server=0.2.0
-  - kealib=1.4.7
-  - kiwisolver=1.0.1
-  - krb5=1.16.1
-  - libboost=1.67.0
-  - libcurl=7.62.0
-  - libgdal=2.2.2
-  - libiconv=1.15
-  - libkml=1.3.0
-  - libnetcdf=4.4.1.1
-  - libpng=1.6.35
-  - libpq=10.5
-  - libsodium=1.0.16
-  - libspatialite=4.3.0a
-  - libssh2=1.8.0
-  - libtiff=4.0.9
-  - libxml2=2.9.8
-  - libxslt=1.1.32
-  - lxml=4.2.5
-  - m2w64-gcc-libgfortran=5.3.0
-  - m2w64-gcc-libs=5.3.0
-  - m2w64-gcc-libs-core=5.3.0
-  - m2w64-gmp=6.1.0
-  - m2w64-libwinpthread-git
-  - markupsafe=1.0
-  - matplotlib=3.0.1
-  - mistune=0.8.4
-  - mkl=2018.0.3
-  - mkl_fft=1.0.6
-  - mkl_random=1.0.1
-  - msys2-conda-epoch=20160418
-  - nbconvert=5.3.1
-  - nbformat=4.4.0
-  - notebook=5.7.0
-  - numpy=1.14.2
-  - numpy-base=1.15.3
-  - olefile=0.46
-  - openjpeg=2.3.0
-  - openssl=1.0.2p
-  - owslib=0.17.0
-  - pandas=0.23.4
-  - pandoc=2.2.3.2
-  - pandocfilters=1.4.2
-  - parso=0.3.1
-  - pickleshare=0.7.5
-  - pillow=5.3.0
-  - pip=10.0.1
-  - proj4=4.9.3
-  - prometheus_client=0.4.2
-  - prompt_toolkit=2.0.7
-  - pycparser=2.19
-  - pyepsg=0.3.2
-  - pygments=2.2.0
-  - pyopenssl=18.0.0
-  - pyparsing=2.3.0
-  - pyproj=1.9.5.1
-  - pyqt=5.9.2
-  - pyshp=1.2.12
-  - pysocks=1.6.8
-  - python=3.6.7
-  - python-dateutil=2.7.3
-  - pytz=2018.7
-  - pywinpty=0.5.4
-  - pyzmq=17.1.2
-  - qt=5.9.6
-  - qtconsole=4.4.2
-  - rasterio=0.36.0
-  - requests=2.20.1
-  - s3fs=0.2.0
-  - s3transfer=0.1.13
-  - scikit-learn=0.20.1
-  - scipy=1.1.0
-  - send2trash=1.5.0
-  - setuptools=40.4.3
-  - shapely=1.6.4
-  - sip=4.19.8
-  - six=1.11.0
-  - snuggs=1.4.2
-  - sqlite=3.25.2
-  - terminado=0.8.1
-  - testpath=0.4.2
-  - tk=8.6.8
-  - tornado=5.1.1
-  - traitlets=4.3.2
-  - urllib3=1.23
-  - vc=14.1
-  - vs2015_runtime
-  - wcwidth=0.1.7
-  - webencodings=0.5.1
-  - wheel=0.32.2
-  - widgetsnbextension=3.4.2
-  - win_inet_pton=1.0.1
-  - wincertstore=0.2
-  - winpty=0.4.3
-  - xarray=0.11.0
-  - xerces-c=3.2.2
-  - xz=5.2.4
-  - zeromq=4.2.5
-  - zlib=1.2.11
+  - affine=2.2.1=py36_0
+  - asn1crypto=0.24.0=py36_0
+  - attrs=18.2.0=py36h28b3542_0
+  - backcall=0.1.0=py36_0
+  - blas=1.0=mkl
+  - bleach=3.0.2=py36_0
+  - boto3=1.9.35=py36_0
+  - botocore=1.12.35=py36_0
+  - ca-certificates=2018.03.07=0
+  - cartopy=0.16.0=py36hbd42bde_0
+  - certifi=2018.10.15=py36_0
+  - cffi=1.11.5=py36h74b6da3_1
+  - chardet=3.0.4=py36_1
+  - click=7.0=py36_0
+  - click-plugins=1.0.4=py36_0
+  - cligj=0.5.0=py36_0
+  - colorama=0.4.0=py36_0
+  - cryptography=2.3.1=py36h74b6da3_0
+  - curl=7.62.0=h2a8f88b_0
+  - cycler=0.10.0=py36h009560c_0
+  - decorator=4.3.0=py36_0
+  - docutils=0.14=py36h6012d8f_0
+  - entrypoints=0.2.3=py36_2
+  - expat=2.2.5=he025d50_0
+  - freetype=2.9.1=ha9979f8_1
+  - freexl=1.0.5=hfa6e2cd_0
+  - geos=3.6.2=h9ef7328_2
+  - hdf4=4.2.13=h712560f_2
+  - hdf5=1.10.1=h98b8871_1
+  - icc_rt=2017.0.4=h97af966_0
+  - icu=58.2=ha66f8fd_1
+  - idna=2.7=py36_0
+  - intel-openmp=2019.0=118
+  - ipykernel=5.1.0=py36h39e3cac_0
+  - ipython=7.1.1=py36h39e3cac_0
+  - ipython_genutils=0.2.0=py36h3c5d0ee_0
+  - ipywidgets=7.4.2=py36_0
+  - jedi=0.13.1=py36_0
+  - jinja2=2.10=py36_0
+  - jmespath=0.9.3=py36_0
+  - jpeg=9b=hb83a4c4_2
+  - jsonschema=2.6.0=py36h7636477_0
+  - jupyter=1.0.0=py36_7
+  - jupyter_client=5.2.3=py36_0
+  - jupyter_console=6.0.0=py36_0
+  - jupyter_core=4.4.0=py36_0
+  - jupyterlab=0.35.3=py36_0
+  - jupyterlab_server=0.2.0=py36_0
+  - kealib=1.4.7=ha5b336b_5
+  - kiwisolver=1.0.1=py36h6538335_0
+  - krb5=1.16.1=h038dc86_6
+  - libboost=1.67.0=hd9e427e_4
+  - libcurl=7.62.0=h2a8f88b_0
+  - libgdal=2.2.2=h2727f2b_1
+  - libiconv=1.15=h1df5818_7
+  - libkml=1.3.0=he5f2a48_4
+  - libnetcdf=4.4.1.1=h825a56a_8
+  - libpng=1.6.35=h2a8f88b_0
+  - libpq=10.5=h5fe2233_0
+  - libsodium=1.0.16=h9d3ae62_0
+  - libspatialite=4.3.0a=h383548d_18
+  - libssh2=1.8.0=hd619d38_4
+  - libtiff=4.0.9=h36446d0_2
+  - libxml2=2.9.8=hadb2253_1
+  - libxslt=1.1.32=hf6f1972_0
+  - lxml=4.2.5=py36hef2cd61_0
+  - m2w64-gcc-libgfortran=5.3.0=6
+  - m2w64-gcc-libs=5.3.0=7
+  - m2w64-gcc-libs-core=5.3.0=7
+  - m2w64-gmp=6.1.0=2
+  - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
+  - markupsafe=1.0=py36hfa6e2cd_1
+  - matplotlib=3.0.1=py36hc8f65d3_0
+  - mistune=0.8.4=py36he774522_0
+  - mkl=2018.0.3=1
+  - mkl_fft=1.0.6=py36hdbbee80_0
+  - mkl_random=1.0.1=py36h77b88f5_1
+  - msys2-conda-epoch=20160418=1
+  - nbconvert=5.3.1=py36_0
+  - nbformat=4.4.0=py36h3a5bc1b_0
+  - notebook=5.7.0=py36_0
+  - numpy=1.14.2=py36h5c71026_0
+  - numpy-base=1.15.3=py36h8128ebf_0
+  - olefile=0.46=py36_0
+  - openjpeg=2.3.0=h5ec785f_1
+  - openssl=1.0.2p=hfa6e2cd_0
+  - owslib=0.17.0=py36_0
+  - pandas=0.23.4=py36h830ac7b_0
+  - pandoc=2.2.3.2=0
+  - pandocfilters=1.4.2=py36_1
+  - parso=0.3.1=py36_0
+  - pickleshare=0.7.5=py36_0
+  - pillow=5.3.0=py36hdc69c19_0
+  - pip=10.0.1=py36_0
+  - proj4=4.9.3=hcf24537_7
+  - prometheus_client=0.4.2=py36_0
+  - prompt_toolkit=2.0.7=py36_0
+  - pycparser=2.19=py36_0
+  - pyepsg=0.3.2=py36_0
+  - pygments=2.2.0=py36hb010967_0
+  - pyopenssl=18.0.0=py36_0
+  - pyparsing=2.3.0=py36_0
+  - pyproj=1.9.5.1=py36_0
+  - pyqt=5.9.2=py36h6538335_2
+  - pyshp=1.2.12=py36_0
+  - pysocks=1.6.8=py36_0
+  - python=3.6.7=h33f27b4_1
+  - python-dateutil=2.7.3=py36_0
+  - pytz=2018.7=py36_0
+  - pywinpty=0.5.4=py36_0
+  - pyzmq=17.1.2=py36hfa6e2cd_0
+  - qt=5.9.6=vc14h1e9a669_2
+  - qtconsole=4.4.2=py36_0
+  - rasterio=0.36.0=py36hb8ea33a_1
+  - requests=2.20.1=py36_0
+  - s3fs=0.2.0=py36_0
+  - s3transfer=0.1.13=py36_0
+  - scikit-learn=0.20.1=py36hb854c30_0
+  - scipy=1.1.0=py36hc28095f_0
+  - send2trash=1.5.0=py36_0
+  - setuptools=40.4.3=py36_0
+  - shapely=1.6.4=py36hc90234e_0
+  - sip=4.19.8=py36h6538335_0
+  - six=1.11.0=py36_1
+  - snuggs=1.4.2=py36_0
+  - sqlite=3.25.2=hfa6e2cd_0
+  - terminado=0.8.1=py36_1
+  - testpath=0.4.2=py36_0
+  - tk=8.6.8=hfa6e2cd_0
+  - tornado=5.1.1=py36hfa6e2cd_0
+  - traitlets=4.3.2=py36h096827d_0
+  - urllib3=1.23=py36_0
+  - vc=14.1=h0510ff6_4
+  - vs2015_runtime=14.15.26706=h3a45250_0
+  - wcwidth=0.1.7=py36h3d5aa90_0
+  - webencodings=0.5.1=py36_1
+  - wheel=0.32.2=py36_0
+  - widgetsnbextension=3.4.2=py36_0
+  - win_inet_pton=1.0.1=py36_1
+  - wincertstore=0.2=py36h7fe50ca_0
+  - winpty=0.4.3=4
+  - xarray=0.11.0=py36_0
+  - xerces-c=3.2.2=ha925a31_0
+  - xz=5.2.4=h2fa13f4_4
+  - zeromq=4.2.5=he025d50_1
+  - zlib=1.2.11=h8395fce_2
