--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -2,24 +2,15 @@ name: RCES_Final
 channels:
   - defaults
 dependencies:
-  - cartopy=0.16.0
-  - ipython=7.1.1
-  - jupyter=1.0.0
-  - jupyter_client=5.2.3
-  - jupyter_console=6.0.0
-  - jupyter_core=4.4.0
-  - jupyterlab=0.35.3
-  - jupyterlab_server=0.2.0
-  - matplotlib=3.0.1
-  - notebook=5.7.0
-  - numpy=1.14.2
-  - numpy-base=1.15.3
-  - pandas=0.23.4
-  - pyproj=1.9.5.1
-  - python=3.6.7
-  - rasterio=0.36.0
-  - s3fs=0.2.0
-  - s3transfer=0.1.13
-  - scikit-learn=0.20.1
-  - scipy=1.1.0
-  - xarray=0.11.0
+  - python=3.6
+  - cartopy
+  - matplotlib
+  - numpy
+  - pandas
+  - pyproj
+  - rasterio
+  - s3fs
+  - s3transfer
+  - scikit-learn
+  - scipy
+  - xarray
